--- a/bundles/runtime/session/configure/sql_structure.yaml
+++ b/bundles/runtime/session/configure/sql_structure.yaml
@@ -8,3 +8,14 @@ list:
     extra_info: longblob
     data: longblob
     ip: string
+    last_hit: int
+hits:
+  singular: hit
+  plural: hits
+  fields:
+    url: string
+    referer: string
+    exec_time_ms: float
+    parent: int
+  hasOne: 
+    - list
