added stuff for hit tracking

--- a/bundles/runtime/session/configure/sql_structure.yaml
+++ b/bundles/runtime/session/configure/sql_structure.yaml
@@ -16,6 +16,9 @@ hits:
     url: string
     referer: string
     exec_time_ms: float
-    parent: int
+    parent: 
+      Type: int
+      Default: null
+      Null: 'YES'
   hasOne: 
     - list
