--- a/bundles/feature/messages/configure/sql_structure.yaml
+++ b/bundles/feature/messages/configure/sql_structure.yaml
@@ -2,7 +2,7 @@ message:
 	singular: message
 	plural: messages
 	fields:
-		event: string
+		namespace: string
 		message: string
 		type: string
 		field: string
@@ -10,4 +10,4 @@ message:
 		status: "enum('active','cleared')"
 		viewed: "enum('no','yes')"
 	hasOne:
-		- members.account
+		- session.list
